2005-04-16	blytkerchan
	* depends.h: new file